<resources>

    <string name="app_name">HOTSpot</string>
    <string name="app_subtitle">Heroes Of The Storm Companion App</string>
    <string name="find_my_mmr_button_text">Find My MMR</string>
    <string name="generate_game_button_text">Game Generator</string>
    <string name="user_name">User Name</string>
    <string name="quick_match">Quick Match</string>
    <string name="unranked_draft">Unranked Draft</string>
    <string name="hero_league">Hero League</string>
    <string name="team_league">Team League</string>
    <string name="gamertag_input_hint">Gamer Tag</string>
    <string name="number_input_hint">Number</string>
    <string name="get_mmr_submit">Submit</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="map">Map</string>
    <string name="hero_1">Hero 1</string>
    <string name="hero_2">Hero 2</string>
    <string name="hero_3">Hero 3</string>
    <string name="hero_4">Hero 4</string>
    <string name="hero_5">Hero 5</string>
    <string name="hero_6">Hero 6</string>
    <string name="hero_7">Hero 7</string>
    <string name="hero_8">Hero 8</string>
    <string name="hero_9">Hero 9</string>
    <string name="hero_10">Hero 10</string>
    <string name="hero_restrictive">Team-Wide Hero Restrictive</string>
    <string name="global_restrictive">Game-Wide Hero Restrictive</string>
    <string name="hero_league_colon">Hero League: %1$s</string>
    <string name="unranked_draft_colon">Unranked Draft: %1$s</string>
    <string name="team_league_colon">Team League: %1$s</string>
    <string name="quick_match_colon">Quick Match: %1$s</string>
    <string name="please_wait">Please Wait</string>
    <string name="description_1">Use this to generate a random or semi-random game of Heroes of the Storm.</string>
    <string name="description_2">Customize your heroes and map using the dropdowns or leave some/all to chance.</string>
    <string name="description_3">The Hero Restrictive Switch will prevent more than one of the same hero on a team.</string>
    <string name="description_4">The Global Restrictive Switch will prevent the same hero appearing on both teams.</string>
    <string name="description_5">Tap on hero portraits to find out more information.</string>
    <string name="not_available">Not Available</string>
    <string name="user_not_found">User Not Found, Please Try Again</string>
    <string name="back_button">Back</string>
    <string name="decima_font_path">fonts/Decima-Nova-W01-Bold.ttf</string>
    <string name="forty_second_street_font_path">fonts/FORTSSH_.ttf</string>
    <string name="generating_game">Generating Game</string>
    <string name="continue_button">Continue Button</string>
    <string name="game_generator">Game Generator</string>
</resources>
