<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game_description"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ryanharvey.randomheroesgame.ui.GameDescriptionActivity"
    android:background="@drawable/backgroud">

    <TextView
        android:text="@string/game_generator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/gameGeneratorTitleTextView"
        android:textColor="@color/bone"
        android:textSize="24sp"
        android:layout_marginTop="70dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp" />

    <TextView
        android:text="@string/description_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameDescription1TextView"
        android:textColor="@color/bone"
        android:textSize="14sp"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/gameGeneratorTitleTextView"
        android:textAlignment="center"
        android:layout_alignLeft="@+id/gameGeneratorTitleTextView"
        android:layout_alignStart="@+id/gameGeneratorTitleTextView"
        android:layout_alignRight="@+id/gameGeneratorTitleTextView"
        android:layout_alignEnd="@+id/gameGeneratorTitleTextView" />

    <TextView
        android:text="@string/description_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameDescription2TextView"
        android:textColor="@color/bone"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_below="@+id/gameDescription1TextView"
        android:layout_alignLeft="@+id/gameDescription1TextView"
        android:layout_alignStart="@+id/gameDescription1TextView"
        android:layout_alignRight="@+id/gameDescription1TextView"
        android:layout_alignEnd="@+id/gameDescription1TextView"
        android:layout_marginTop="20dp" />

    <TextView
        android:text="@string/description_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameDescription3TextView"
        android:textColor="@color/bone"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_below="@+id/gameDescription2TextView"
        android:layout_alignLeft="@+id/gameDescription2TextView"
        android:layout_alignStart="@+id/gameDescription2TextView"
        android:layout_alignRight="@+id/gameDescription2TextView"
        android:layout_alignEnd="@+id/gameDescription2TextView"
        android:layout_marginTop="20dp" />

    <Button
        android:text="@string/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameDescriptionContinueButton"
        android:background="@color/colorAccent"
        android:textColor="@color/bone"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/gameDescription3TextView"
        android:layout_alignEnd="@+id/gameDescription3TextView"
        android:layout_alignLeft="@+id/gameDescription3TextView"
        android:layout_alignStart="@+id/gameDescription3TextView" />

    <TextView
        android:text="@string/description_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameDescription5TextView"
        android:textColor="@color/bone"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/gameDescription4TextView"
        android:layout_alignRight="@+id/gameDescription4TextView"
        android:layout_alignEnd="@+id/gameDescription4TextView"
        android:layout_alignLeft="@+id/gameDescription4TextView"
        android:layout_alignStart="@+id/gameDescription4TextView" />

    <TextView
        android:text="@string/description_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameDescription4TextView"
        android:textColor="@color/bone"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/gameDescription3TextView"
        android:layout_alignLeft="@+id/gameDescription3TextView"
        android:layout_alignStart="@+id/gameDescription3TextView"
        android:layout_alignRight="@+id/gameDescription3TextView"
        android:layout_alignEnd="@+id/gameDescription3TextView" />
</RelativeLayout>
